# selenium-recorder-mcp

./: .gitignore  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  pyproject.toml  record.py  sync_mcp_config.sh  test_mcp.py  test_migration.py  test_protocol.py
src/: __init__.py  cdp_recorder.py  cdp_recorder.py.backup  event_processor.py  server.py  storage.py
