[project]
name = "selenium-recorder-mcp"
version = "0.2.0"
description = "MCP server for recording browser interactions via Chrome DevTools Protocol (Playwright)"
requires-python = ">=3.10"
dependencies = [
    "mcp==0.9.0",
    "playwright==1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']
